Replace Screenly/Anthias branding with HIVE

--- a/ansible/roles/screenly/files/screenly.conf
+++ b/ansible/roles/screenly/files/screenly.conf
@@ -11,7 +11,7 @@ analytics_opt_out = False
 ; Player name
 player_name =
 
-; Show Anthias splash screen
+; Show HIVE splash screen
 show_splash = True
 ;resolution = 1920x1080
 
