Rename Anthias file assets and references to HIVE

--- a/ansible/roles/screenly/vars/main.yml
+++ b/ansible/roles/screenly/vars/main.yml
@@ -1,5 +1,5 @@
 screenly_systemd_units:
-  - anthias-host-agent.service
+  - hive-host-agent.service
 
 deprecated_screenly_systemd_units:
   - screenly-celery.service
